testsuite/tests/properties/invalid_n_propgate/valid_2.lkt
import common

class BarNode: FooNode {
    @ignore_unused fun main_prop(): Equation =
        %propagate(node.ref_var, BazNode.prop2, node.type_var, node.type_var)
}
